tring to fix shifting left right

--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-family: futura;
-  overflow-x: hidden;
-  @media (max-width: 500px;) {
-    width: calc(100vw);
-  }
+  overflow: hidden;
+  overflow-y: auto;
 }
